- Zeiten geändert - Spendenorgas hinzugefügt

--- a/www/ar/index.html
+++ b/www/ar/index.html
@@ -4,7 +4,7 @@
 		<title>إيقاف بطاقة الدفع</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="author" content="Bezahlkarte Stoppen"/>
+		<meta name="author" content="إيقاف بطاقة الدفع"/>
 		<meta name="robots" content="index,follow"/>
 		<meta name="description" content=""/>
 		<link href="../static/style/fonts.css" rel="stylesheet"/>
@@ -30,22 +30,22 @@
 
 
 		<div class="content">
-			<h1>دليل استبدال القسائم</h1>
-			<p>هل تحصل على بطاقة الدفع و50 يورو نقدًا فقط في الشهر؟ إذا كنت تحتاج إلى المزيد من النقود، دعنا نتبادل!</p>
+			<h1>تعليمات لتبادل القسائم</h1>
+			<p>هل تحصل على بطاقة الدفع و فقط 50€ نقدًا شهريًا؟ إذا كنت بحاجة إلى المزيد من النقد، دعنا نتبادل!</p>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
 			<ol>
-				<li><strong>قم بشراء قسيمة</strong> في المتاجر <span translate="no">Aldi</span>، <span translate="no">Lidl</span>، <span translate="no">Edeka</span>، <span translate="no">Kaufland</span>، <span translate="no">Penny</span>، <span translate="no">Rewe</span> أو <span translate="no">DM</span> بقيمة <strong>50€</strong></li>
-				<li><strong>أحضر القسيمة إلى مكان التبادل!</strong><br>ستحصل هنا على النقود مقابل القسائم.</li>
+				<li><strong>اشتر قسيمة</strong> من المتاجر <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> أو <span translate="no">DM</span> بقيمة <strong>50€</strong></li>
+				<li><strong>أحضر القسيمة إلى مكان التبادل!</strong><br>هنا تحصل على نقد مقابل القسائم.</li>
 			</ol>
 
 			<h2>أين؟</h2>
 			<p translate="no">Bürgerbüro Die Linke<br>Theodor-Körner-Str. 7<br>69115 Heidelberg</p>
 
-			<p>من الأفضل الوصول عن طريق وسائل النقل العامة من المحطات <span translate="no">Betriebshof</span> و <span translate="no">Hauptbahnhof</span></p>
+			<p>من الأفضل الوصول عن طريق المواصلات العامة من المحطات <span translate="no">Betriebshof</span> و <span translate="no">Hauptbahnhof</span></p>
 			<h2>متى؟</h2>
-			<p>كل ثاني ثلاثاء وكل ثالث جمعة في الشهر من الساعة 16:00 إلى الساعة 19:00.</p>
+			<p>كل ثاني ثلاثاء وكل ثالث جمعة من الشهر من الساعة 17:00 حتى الساعة 19:00.</p>
 		</div>
 
 		<div class="content">
@@ -53,136 +53,100 @@
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>في هايدلبرج ومنطقة راين نيكار، سيتم تقديم "بطاقة الدفع" التمييزية قريبًا لجميع اللاجئين الذين يتلقون مساعدات وفقًا لقانون مساعدات طالبي اللجوء. وراء القرار بشأن بطاقة الدفع، توجد سياسة عنصرية تحاول تقييد حياة اللاجئين ومواصلة عزل أوروبا عن الجنوب العالمي. نحن نعارض بطاقة الدفع التقييدية ونريد أن نجعل التضامن عمليًا!</p>
+			<p>في هايدلبرغ ومنطقة راين-نيكار، ستُطبق قريبًا بطاقة الدفع التمييزية لجميع اللاجئين الذين يتلقون مساعدات وفقًا لقانون استحقاقات طالبي اللجوء. وراء القرار ببطاقة الدفع، هناك سياسة عنصرية تحاول تقييد حياة اللاجئين بشكل متزايد وعزل أوروبا عن الجنوب العالمي. نحن نعترض على بطاقة الدفع التقييدية ونريد جعل التضامن واقعاً عملياً!</p>
 
 			<h2>لماذا نرفض بطاقة الدفع؟</h2>
 
-			<p>تمثل بطاقة الدفع تدخلًا في استقلالية اللاجئين وتؤدي إلى تقييد المشاركة في الحياة اليومية. في منطقة راين نيكار، سيكون هناك حد أقصى للمبالغ النقدية بقيمة 50€. ومن المتوقع أن يكون هناك تقييد مماثل في هايدلبرج. التحويلات، التسوق عبر الإنترنت والعقود غير ممكنة أو تتطلب جهدًا كبيرًا. هناك العديد من مجالات الحياة التي تتطلب النقود: مثل المتاجر الصغيرة، السوق الأسبوعي، أسواق السلع المستعملة وحتى الفعاليات الثقافية. كل هذا يتم تقييده بواسطة بطاقة الدفع.</p>
+			<p>تمثل بطاقة الدفع تدخلاً في استقلالية اللاجئين وتؤدي إلى تقييد المشاركة في الحياة اليومية. ستكون هناك حد للنقدية في منطقة راين-نيكار بمقدار 50€. من المتوقع أن تكون هناك قيود مشابهة في هايدلبرغ أيضًا. التحويلات، التسوق عبر الإنترنت والعقود ليست ممكنة أو تتطلب جهدًا كبيرًا. العديد من مجالات الحياة تتطلب نقدًا: مثل المحلات الصغيرة، الأسواق الأسبوعية، أسواق الأغراض المستعملة أو حتى الفعاليات الثقافية. كل هذا يتم تقييده بواسطة بطاقة الدفع.</p>
 
-			<p>على الرغم من أن بطاقة الدفع تشبه من الخارج بطاقة EC، إلا أن إمكانيات استخدامها أكثر تقييدًا، حيث تعمل البطاقة فقط في المتاجر المحددة. وإذا أراد المتضررون توفير المال رغم الخدمات المحدودة لدعم أسرهم في الخارج، يصبح الأمر صعبًا عليهم. البطاقة تثير القلق من ناحية حماية البيانات. توفر بطاقة الدفع للسلطات إمكانية الفهم ووسائل التحكم.</p>
-
-
-			<h2>ما الذي نخطط له؟</h2>
+			<p>حتى وإن كانت بطاقة الدفع تشبه من الخارج بطاقة ائتمان، فإن استخدامها يكون محدودًا جدًا، حيث أن البطاقة تعمل فقط في متاجر محددة. وإذا أراد المستفيدون ادخار المال من المعونات المحدودة لدعم أسرهم في الخارج، يصبح ذلك صعبًا للغاية. البطاقة تعتبر ذات مشاكل من ناحية حماية البيانات. توفر بطاقة الدفع للسلطات نظرات وإمكانيات للتحكم.</p>
 
 
-			<p>نريد في هايدلبرج أن لا نقبل هذه البطاقة التمييزية والإقصائية ونظهر تضامننا مع المتضررين.</p>
+			<h2>ماذا نخطط؟</h2>
 
-			<p>لمواجهة قيود بطاقة الدفع، نتحد محليًا. تحت نموذج العديد من المبادرات الأخرى على مستوى البلاد، نرغب في تنظيم تبادل القسائم في هايدلبرج والمناطق المحيطة.<p>
+
+			<p>لا نريد قبول هذه البطاقة التمييزية والعازلة في هايدلبرغ ونريد إظهار التضامن مع المتضررين.</p>
+
+			<p>لمواجهة القيود لبطاقة الدفع، نتحد محليًا. بناءً على مثال العديد من المبادرات الأخرى على المستوى الوطني، نريد تنظيم تبادل القسائم أيضًا في هايدلبرغ والمناطق المحيطة.<p>
 
 			<p>المبدأ:</p>
 
 			<ol>
-				<li>الناس الذين لديهم بطاقة الدفع يشترون قسيمة شراء في السوبرماركت</li>
-				<li>في تبادل القسائم يحصلون على قيمة القسيمة نقدًا</li>
-				<li>الناس المتضامنون بدون بطاقة الدفع يحصلون على القسائم مقابل النقود</li>
+				<li>الأشخاص الذين لديهم بطاقة دفع يشترون قسيمة شراء من السوبرماركت</li>
+				<li>في تبادل القسائم يحصلون على القيمة النقدية للقسيمة</li>
+				<li>الأشخاص المتضامنون بدون بطاقة دفع يأخذون القسائم مقابل النقود</li>
 			</ol>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>إن عمليات التبادل ليست غير قانونية ولكنها رد على سياسة قد تكون غير دستورية، حيث تنتهك حقوق المتضررين والحد الأقصى للنقد البالغ 50€ يهدد الحد الأدنى للمعيشة الكريمة. (يمكنك قراءته تحت: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
+			<p>لا تعد عمليات التبادل هذه غير قانونية بل هي رد على سياسة يُزعم أنها غير دستورية، حيث تنتهك حقوق الأساس للمتضررين ويهدد سقف النقدية بـ 50€ الحد الأدنى للعيش بكرامة. (مزيد من التفاصيل: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
 
 			<h2>كيف يمكنك الدعم؟</h2>
 
-			<p>لا تتردد في التواصل معنا و/أو الحضور في لقاءاتنا إذا كنت...</p>
+			<p>يرجى التواصل معنا و/أو الحضور في اجتماعاتنا إذا كنت...</p>
 			<ul>
-				<li>... ترغب في مشاركة آرائك الخاصة</li>
-				<li>... ترغب في دعم تنظيم أسواق التبادل</li>
-				<li>... ترغب في تولي نوبات عمل في سوق التبادل</li>
+				<li>... تريد تقديم وجهات نظر خاصة بك</li>
+				<li>... تريد دعم تنظيم أسواق التبادل</li>
+				<li>... تريد تولي نوبات عمل في سوق التبادل</li>
 				<li>... يمكنك توفير أماكن لنا</li>
-				<li>... منظمة في أماكن ومستعدة لتقديم قسائم شراء في أماكنكم</li>
-				<li>... يمكنك أنت وفريقك شراء قسائم شراء، مثلًا لشقتك المشتركة، مشروع بيتك، جمعيتك...</li>
-				<li>... ترغب في المشاركة في حملة سياسية ضد هذه الهجمات العنصرية</li>
-				<li>... ترغب في دعم الجهود القانونية ضد بطاقة الدفع أو إذا كنت تريد التعرف علينا أو لديك أسئلة.</li>
+				<li>... أنت في مساحات منظمة وأنتم مستعدون لإعطاء قسائم الشراء في مساحاتكم</li>
+				<li>... يمكنك أخذ قسائم الشراء منا جماعيًا، مثل لشقتك، مشروعك السكني، جمعيتك...</li>
+				<li>... تريد المشاركة في حملة سياسية ضد هذه الهجمات العنصرية</li>
+				<li>... تريد دعم الجهود القانونية ضد بطاقة الدفع أو إذا كنت تريد فقط التعرف علينا أو لديك أسئلة.</li>
 			</ul>
 
-			<p>نحن بحاجة أيضًا إلى التبرعات. لتبادل القسائم، نحتاج إلى مال كافٍ. بالإضافة إلى ذلك، نحتاج إلى بعض المال، على سبيل المثال للمواد مثل المنشورات أو الملصقات، والمشتريات الصغيرة مثل الصناديق المقفلة أو ماسحات الباركود أو إيجارات الأماكن للفعاليات التوعوية. يمكن إصدار إيصالات التبرعات.</p>
+			<p>نحن نعتمد أيضًا على التبرعات. من أجل عمليات التبادل، نحتاج إلى وسادة مالية. بالإضافة إلى ذلك، نحتاج إلى بعض المال، مثل المواد مثل المنشورات أو الملصقات، مشتريات صغيرة مثل الصناديق القابلة للإغلاق أو ماسحات الباركود أو إيجارات المساحات لفعاليات المعلومات. يمكن إصدار إيصالات تبرع.</p>
 
-			<p>لنعمل من أجل عالم متضامن!</p>
+			<p>إذا لم تعد الوسادة المالية ضرورية، ستُتبرع إلى المنظمات التالية:</p>
 
-			<h2>كيف تبدو الهياكل فوق الإقليمية؟</h2>
+			<ul>
+				<li><a href="https://sea-watch.org/en/">Sea-Watch e.V.</a></li>
+				<li><a href="https://alarmphone.org/en/">ALARMPHONE</a></li>
+				<li><a href="https://www.asyl-heidelberg.de/">حلقة عمل اللجوء هايدلبرغ e.V.</a></li>
+				<li><a href="https://diakonie-heidelberg.de/angebote/flucht-und-migration/cafe-talk">مقهى الحديث</a></li>				
+			</ul>
 
-			<p>هناك بالفعل في العديد من المدن مبادرات ضد بطاقة الدفع ومبادرات تبادل مثل ما نقوم به. نحن متصلون بشبكة وطنية "حقوق اجتماعية متساوية للجميع!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">موقع الويب</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">إنستغرام</a>)</p>
+			<p>هذا يعني أن تبرعك سيحقق الخير بأي حال.</p>
+
+			<p>من أجل عالم متضامن!</p>
+
+			<h2>كيف تبدو الهياكل الوطنية؟</h2>
+
+			<p>توجد بالفعل في العديد من المدن مبادرات ضد بطاقة الدفع ومبادرات للتبادل مثل مبادرتنا. نحن متصلون على المستوى الوطني في شبكة "نفس الحقوق الاجتماعية للجميع!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">موقع الويب</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">إنستغرام</a>)</p>
 
 			<h2>مزيد من المعلومات</h2>
 			
 
 			<ul>
 				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">تقييم علمي لبطاقة الدفع</a><br/>مجلس اللاجئين بادن فورتمبيرغ</li>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق أقل وأقل للأشخاص اللاجئين</a><br/>مجلس اللاجئين بادن فورتمبيرغ</li>
-				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">ما الذي يجب معرفته عن بطاقة الدفع الجديدة للاجئين</a><br/>برلمان بادن فورتمبيرغ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق أقل لأشخاص اللاجئين</a><br/>مجلس اللاجئين بادن فورتمبيرغ</li>
+				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">ما يجب معرفته عن بطاقة الدفع الجديدة للاجئين</a><br/>برلمان بادن فورتمبيرغ</li>
 			</ul>
 		</div>
 
 		<div id="openletter" class="content">
 			<h1>رسالة مفتوحة</h1>
 
-			<p>السيدة المحترمة العمدة يانسن، السادة أعضاء لجنة
-			الشؤون الاجتماعية وتكافؤ الفرص،</p>
+			<p>السيدة العمد ميلاني يانسن المحترمة، أعضاء لجنة الشؤون الاجتماعية وتكافؤ الفرص المحترمون،</p>
 
-			<p>نراقب بقلق ودهشة تقديم بطاقة
-			الدفع بشكل تدريجي للأشخاص الذين يتلقون إعانات بموجب قانون المساعدات لطالبي
-			اللجوء في بادن فورتمبيرغ.
-			بسبب العديد من الجوانب التمييزية والمقيدة والحصرية
-			لبطاقة الدفع، نتحدث ضد تقديمها في هايدلبرغ.</p>
+			<p>نراقب بصدمة وذهول التقديم التدريجي لبطاقة الدفع للأشخاص المستفيدين من إعانات طالبي اللجوء في بادن فورتمبيرغ. نظرًا للعدد الكبير من الجوانب التمييزية والمقيدة والمستبعدة لبطاقة الدفع، نحن نعترض على تقديمها في هايدلبرغ.</p>
 
 			<ol>
-			<li>الأشخاص الحماية في هايدلبرغ مثل الآخرين لديهم حساب بنكي. باستخدام
-			بطاقة حساب الجيرو يمكنهم الوصول إلى أموالهم. إذا لم يكونوا في القوة العاملة
-			حتى الآن، يتلقون أولاً إعانات بموجب قانون AsylbLG. من المفترض أن يتم تحويل
-			هذه الإعانات إلى بطاقات دفع في المستقبل، مما يقيد النفقات النقدية وكذلك
-			التحويلات/الخصم المباشر. الهدف: لا تحويلات للعائلة الخاصة أو للمهربين،
-			تخويف، تقليل "عوامل السحب". هذا
-			الخلفية لبطاقة الدفع تنتهك حقوقنا الأساسية: حظر التمييز، حماية الأسرة،
-			الحقوق الشخصية.</li>
+			<li>المهاجرون الباحثون عن الحماية لديهم في هايدلبرغ حساب مثل الآخرين. مع بطاقة الحساب الجاري يمكنهم الوصول إلى أموالهم. إذا لم يكونوا في الحياة العملية بعد، سيحصلون أولاً على إعانات وفقًا لقانون استحقاقات طالبي اللجوء. سيتم تحويل هذه الإعانات في المستقبل إلى بطاقات الدفع التي ستقيد كلاً من المصروفات النقدية والتحويلات/الخصومات. الهدف: لا تحويلات إلى أسرهم أو إلى المهربين، الردع، تقليل "عوامل السحب". هذه الخلفية لبطاقة الدفع تنتهك حقوقنا الأساسية: حظر التمييز، حماية الأسرة، الحقوق الشخصية.</li>
 
-			<li>بطاقة الدفع هي تدخل في الحقوق الشخصية. يتم تكبيد الأشخاص اللاجئين بذلك.
-			قد لا يتمكنون من الشراء في المتاجر المفضلة لديهم، لأن المتاجر الصغيرة
-			تجد تجهيز جهاز القراءة للبطاقة الخصم مكلفًا للغاية. للتحويلات والخصم المباشر
-			تحتاج إلى
-			موافقة بواسطة مكتب الشؤون الاجتماعية. إذا كانت هناك احتياجات خاصة، يجب تقديم طلب
-			. 50 € نقدًا هو مبلغ يعتمد على تقدير المكتب. تعيين بطاقة الدفع نفسها يعتمد على
-			التقدير. لن يؤدي هذا فقط إلى زيادة عبء العمل على الإدارة، ولكنه أيضًا يجعل
-			الاعتماد الضخم للمتضررين على
-			المكتب، أيضًا لأن الشفافية لهم تضيع.</li>
+			<li>بطاقة الدفع تدخل في الحقوق الشخصية. يجري تضييق الخناق على اللاجئين. قد لا يتمكنون من الشراء في المتاجر التي يفضلونها لأن تجهيز آلة القارئ البطائق الائتمانية مكلف جدًا للمحلات الصغيرة. للتحويلات والخصومات، يحتاج الأمر إلى إذن من مكتب الشؤون الاجتماعية. عند وجود احتياجات خاصة، يجب تقديم طلب. 50€ نقدًا هو مبلغ يخضع لتقدير المكتب. تعيين بطاقة الدفع نفسها يخضع لتقدير المكتب. لن يؤدي هذا فقط إلى إضافة عبء إضافي للإدارة، بل يجعل أيضًا اعتماد المتضررين على المكتب هائلًا، لأن الشفافية تضيع بالنسبة لهم.</li>
 
-			<li>بالطبع، لن تتحقق الغاية من إدخال بطاقة الدفع. تقرير الأسبوع 49/2024
-			لـ DIW يُظهر أن التحويلات للخارج تأتي فقط بنسب قليلة من
-			الأشخاص اللاجئين، وبالتأكيد الأقل من أولئك الذين يتلقون إعانات بموجب
-			قانون AsylbLG، لأن هذه الإعانات (الأكثر 441€) أقل من
-			راتب المواطن ولا تلبي بالتأكيد المتطلبات، التي أقرها حكم المحكمة الدستورية الفيدرالية
-			لعام 2012 بدون أن يكون الحد الأدنى للمعيشة موجهًا بأغراض الهجرة. وبالطبع
-			أسباب الهروب أكبر بكثير من القضية الحمد.</li>
+			<li>لن يتم تحقيق الهدف من تقديم بطاقة الدفع بأي حال من الأحوال. يظهر تقرير الأسبوع 49/2024 من DIW أن التحويلات الخارجية تأتي فقط بنسبة قليلة جداً من اللاجئين، ومن المؤكد الأقل من أولئك الذين يتلقون إعانات وفقًا لقانون استحقاقات طالبي اللجوء، لأن هذه الإعانات (بحد أقصى 441€) أقل من إعانة العاطلين عن العمل ولا تلبي بالتأكيد المتطلبات التي حددها حكم المحكمة الدستورية الاتحادية لعام 2012، حيث لا ينبغي أن يُنسب الحد الأدنى للوجود لأسباب سياسية هجرة. كما أن أسباب الفرار بالطبع أثقل من مسألة الإعانات.</li>
 
-			<li>تقديم بطاقة دفع تقييدية هو جزء من هجوم كبير على حقوق
-			الأشخاص اللاجئين. تقليل الحقوق الاجتماعية للأشخاص اللاجئين يترافق مع
-			بناء قلعة أوروبا ومحاولات، للتهرب من الالتزام بحماية اللاجئين
-			(الإعلان العالمي لحقوق الإنسان لعام 1948، المادة 14) والالتزامات ليس أقل
-			في شكل اتفاقية جنيف المتعلقة بوضع اللاجئين بعد فترة وجيزة. لقد نجح
-			اليمين المتطرف في تطوير خطاب بارز،
-			يعتبر الأشخاص اللاجئين كتهديد فقط. للأسف، حتى
-			الأحزاب الديمقراطية في السنوات الأخيرة متزايدا تتبنى هذه
-			الخطاب العنصري. إنهم بذلك يتقدمون
-			عمليات التخلص من التضامن وينقلون النقاش الاجتماعي لليمين. بطاقة الدفع ليست سوى
-			سياسة رمزية شعبوية
-			تخدم العنصرية وتستمر في تهميش،
-			التمييز والتحكم في اللاجئين. لا يبدو هذا طرق التكامل!</li>
+			<li>تقديم بطاقة الدفع التقييدية هو جزء من هجوم كبير على حقوق الأشخاص الباحثين عن الحماية. تذهب إزالة الحقوق الاجتماعية للاجئين جنبًا إلى جنب مع توسع قلعة أوروبا ومحاولات التحرر شيئًا فشيئًا من مسؤولية حماية اللاجئين (الإعلان العالمي لحقوق الإنسان لعام 1948، المادة 14) والالتزامات، لا سيما في شكل اتفاقية جنيف للاجئين. لقد تمكن اليمين المتطرف من تطوير خطاب مسيطر ينظر إلى الناس الباحثين عن الحماية فقط كتهديد. للأسف، تقوم أيضًا الأحزاب الديمقراطية على نحو متزايد بالتقاط هذا الخطاب العنصري منذ سنوات. إنها تعزز بذلك عمليات فك الارتباط الاجتماعي وتحول الخطاب المجتمعي نحو اليمين. بطاقة الدفع ليست سوى سياسة رمزية شعبوية تخدم العنصرية وتستبعد وتضيق على اللاجئين أكثر.</li>
 
-			<li>لا يوجد بديل لشركة بطاقة الدفع. لقد أنشأت NRW
-			قاعدة خيار الإنسحاب
-			، والتي تسمح للبلديات بعدم إدخال بطاقة الدفع. وقد قامت العديد من
-			المدن الكبرى بذلك بالفعل. ولكن أيضًا في ساكسونيا السفلى
-			هناك معارضة: على الرغم من عدم وجود قاعدة خيار الإنسحاب، إلا أن مدينة هانوفر
-			توضيح أنها لن تقدم بطاقة الدفع وتشارك بذلك بشجاعة
-			المقاومة العلنية. مجلس المدينة
-			أعلن الأغلبية ومع أحزاب CDU وSPD والخضر
-			أنهم لن يقدموا البطاقة، لأنها تمييزية.</li>
+			<li>تقديم بطاقة الدفع ليس بلا بديل. أدخلت ولاية شمال الراين وستفاليا قاعدة الانسحاب التي تسمح للبلديات بعدم تقديم بطاقة الدفع. وقد استخدمت بالفعل العديد من المدن الكبرى هذه الإمكانية. لكن أيضًا في سكسونيا السفلى يوجد مقاومة: بالرغم من عدم وجود قاعدة انسحاب هناك، إلا أن مدينة هانوفر أعلنت أنها لن تقدم بطاقة الدفع وأظهرت بوضوح مقاومة مفتوحة. أعلن مجلس المدينة بأغلبية ومع فصائل من CDU وSPD والخضر أنهم لن يقدموا البطاقة لأنها تمييزية.</li>
 
 			</ol>
 
-			<p>ندعو الأحزاب في مجلس مدينة هايدلبرغ والإدارة إلى رفض
-			بطاقة الدفع التمييزية والغير مجدية أيضًا في هايدلبرغ.</p>
+			<p>ندعو الفصائل في مجلس بلدية هايدلبرغ والإدارة إلى رفض بطاقة الدفع التمييزية والعديمة الفائدة في هايدلبرغ.</p>
 
-			<p>الموقعين الأوائل</p>
+			<p>الموقعون الأوائل</p>
 
 			<ul>
 				<li translate="no">Bettina Bauer-Teiwes</li>
@@ -229,25 +193,25 @@
 		</div>
 
 		<div id="contact" class="content">
-			<h1>الدعم والتبرعات</h1>
+			<h1>اتصال & تبرعات</h1>
 
-			<p>نحن هيكل مفتوح ونجتمع بانتظام لتنسيق الخطوات القادمة. هل أنت مهتم بأن تصبح نشطًا ضد بطاقة الدفع؟ ثم احضر أحد اجتماعاتنا القادمة أو اتصل بنا.</p>
+			<p>نحن هيكل مفتوح ونلتقي بانتظام لمناقشة الخطوات التالية. هل لديك اهتمام بأن تكون نشطًا ضد بطاقة الدفع؟ ثم احضر إلى أحد اجتماعاتنا التالية أو تواصل معنا.</p>
 
-			<h2>الاتصال</h2>
+			<h2>اتصال</h2>
 
 			<ul>
 				<li>البريد الإلكتروني:<br/><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>إنستغرام:<br/><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li translate="no">تلغرام:<br/><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li translate="no">تيليجرام:<br/><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
-			<h2>التبرعات</h2>
+			<h2>تبرعات</h2>
 
 			<pre translate="no">Röm.-Kath.
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			استخدام هدف الاستخدام مهم، وإلا لن يتم تخصيص التبرع!
+			السبب مهم، وإلا لا يمكن تخصيص التبرع!
 		</div>
 
 	</body>
