--- a/www/de/index.html
+++ b/www/de/index.html
@@ -45,7 +45,7 @@
 
 			<p>Mit öffentlichen Verkehrsmitteln am besten zu erreichen von den Haltestellen <span translate="no">Betriebshof</span> und <span translate="no">Hauptbahnhof</span></p>
 			<h2>Wann?</h2>
-			<p>Jeden 2. Dienstag und jeden 3. Freitag im Monat von 16:00 Uhr bis 19:00 Uhr.</p>
+			<p>Jeden 2. Dienstag und jeden 3. Freitag im Monat von 17:00 Uhr bis 19:00 Uhr.</p>
 		</div>
 
 		<div class="content">
@@ -96,6 +96,17 @@
 			</ul>
 
 			<p>Wir sind außerdem auf Spenden angewiesen. Für die Tauschaktionen brauchen wir einen finanziellen Puffer. Zusätzlich benötigen wir etwas Geld, beispielsweise für Materialien wie Flyer oder Plakate, kleinere Anschaffungen wie abschließbare Kassen oder Barcode-Scanner oder Raummieten für Infoveranstaltungen. Spendenquittungen können ausgestellt werden.</p>
+
+			<p>Sollte der Fall eintreten, dass der finanzielle Puffer nicht mehr gebraucht wird, würde dieser an folgende Organisationen gespendet werden:</p>
+
+			<ul>
+				<li><a href="https://sea-watch.org/en/">Sea-Watch e.V.</a></li>
+				<li><a href="https://alarmphone.org/en/">ALARMPHONE</a></li>
+				<li><a href="https://www.asyl-heidelberg.de/">Asylarbeitskreis Heidelberg e.V.</a></li>
+				<li><a href="https://diakonie-heidelberg.de/angebote/flucht-und-migration/cafe-talk">Café Talk </a></li>				
+			</ul>
+
+			<p>Das bedeutet, dass Deine Spende in jedem Fall Gutes bewirkt.</p>
 
 			<p>Für eine solidarische Welt!</p>
 
