--- a/www/en/index.html
+++ b/www/en/index.html
@@ -45,7 +45,7 @@
 
 			<p>Best reached by public transport from the stops <span translate="no">Betriebshof</span> and <span translate="no">Hauptbahnhof</span></p>
 			<h2>When?</h2>
-			<p>Every 2nd Tuesday and every 3rd Friday of the month from 16:00 to 19:00.</p>
+			<p>Every 2nd Tuesday and every 3rd Friday of the month from 17:00 to 19:00.</p>
 		</div>
 
 		<div class="content">
@@ -91,11 +91,22 @@
 				<li>... you can make premises available to us</li>
 				<li>... you are organized in rooms and you would be willing to give out shopping vouchers in your rooms</li>
 				<li>... collectively buy vouchers from us, e.g. for your shared flat, your house project, your club...</li>
-				<li>... want to participate in a political campaign against these racist attacks</li>
+				<li>... want to take part in a political campaign against these racist attacks</li>
 				<li>... want to support us, take legal action against the payment card or simply if you want to get to know us or have questions.</li>
 			</ul>
 
 			<p>We are also dependent on donations. We need a financial buffer for the swap events. We also need some money, for example for materials such as flyers or posters, smaller purchases such as lockable tills or barcode scanners or room rental for information events. Donation receipts can be issued.</p>
+
+			<p>In the event that the financial buffer is no longer needed, it would be donated to the following organizations:</p>
+
+			<ul>
+				<li><a href="https://sea-watch.org/en/">Sea-Watch e.V.</a></li>
+				<li><a href="https://alarmphone.org/en/">ALARMPHONE</a></li>
+				<li><a href="https://www.asyl-heidelberg.de/">Asylarbeitskreis Heidelberg e.V.</a></li>
+				<li><a href="https://diakonie-heidelberg.de/angebote/flucht-und-migration/cafe-talk">Café Talk </a></li>				
+			</ul>
+
+			<p>This means that your donation will always do good.</p>
 
 			<p>For a world of solidarity!</p>
 
