--- a/www/es/index.html
+++ b/www/es/index.html
@@ -45,7 +45,7 @@
 
 			<p>Se llega mejor en transporte público desde las paradas de autobús <span translate="no">Betriebshof</span> y <span translate="no">Hauptbahnhof</span></p>
 			<h2>¿Cuándo?</h2>
-			<p>Todos los segundos martes y terceros viernes de mes, de 16.00 a 19.00 horas.</p>
+			<p>Todos los segundos martes y terceros viernes de mes, de 17.00 a 19.00 horas.</p>
 		</div>
 
 		<div class="content">
@@ -89,13 +89,24 @@
 				<li>... quieren apoyar la organización de los swap meets</li>
 				<li>... quieren hacer turnos en la tienda de intercambio</li>
 				<li>... puede poner locales a nuestra disposición</li>
-				<li>... eres organizado en las habitaciones y estarías dispuesto a repartir vales de compra en tus habitaciones</li>
+				<li>... eres organizado en las habitaciones y estarías dispuesto a dar vales de compra en tus habitaciones</li>
 				<li>... comprarnos colectivamente vales, por ejemplo, para su piso compartido, su proyecto de casa, su club...</li>
 				<li>... quieren participar en una campaña política contra estos ataques racistas</li>
 				<li>... quiere apoyarnos, emprender acciones legales contra la tarjeta de pago o simplemente si quiere conocernos o tiene preguntas.</li>
 			</ul>
 
 			<p>También dependemos de las donaciones. Necesitamos un colchón financiero para los actos de intercambio. También necesitamos algo de dinero, por ejemplo para materiales como folletos o carteles, compras menores como cajas registradoras con cerradura o escáneres de códigos de barras o alquiler de salas para actos informativos. Se pueden emitir recibos de donativos.</p>
+
+			<p>En caso de que el colchón financiero ya no sea necesario, se donaría a las siguientes organizaciones:</p>
+
+			<ul>
+				<li><a href="https://sea-watch.org/en/">Sea-Watch e.V.</a></li>
+				<li><a href="https://alarmphone.org/en/">ALARMPHONE</a></li>
+				<li><a href="https://www.asyl-heidelberg.de/">Asylarbeitskreis Heidelberg e.V.</a></li>
+				<li><a href="https://diakonie-heidelberg.de/angebote/flucht-und-migration/cafe-talk">Café Talk </a></li>				
+			</ul>
+
+			<p>Esto significa que su donación siempre hará el bien.</p>
 
 			<p>Por un mundo solidario</p>
 
