--- a/www/fr/index.html
+++ b/www/fr/index.html
@@ -45,7 +45,7 @@
 
 			<p>Meilleur accès par les transports en commun depuis les arrêts <span translate="no">Betriebshof</span> et <span translate="no">Hauptbahnhof</span></p>
 			<h2>Quand ?</h2>
-			<p>Chaque 2e mardi et 3e vendredi du mois de 16h00 à 19h00.</p>
+			<p>Chaque 2e mardi et 3e vendredi du mois de 17h00 à 19h00.</p>
 		</div>
 
 		<div class="content">
@@ -59,7 +59,7 @@
 
 			<p>La carte de paiement représente une atteinte à l'autonomie des personnes réfugiées et a pour conséquence de limiter leur participation à la vie quotidienne. Dans le district Rhin-Neckar, la limite d'argent liquide est fixée à 50€. On peut s'attendre à ce qu'il y ait une limite similaire à Heidelberg. Les virements, les achats en ligne et les contrats ne seront pas possibles ou seulement avec beaucoup d'efforts. De nombreux domaines de la vie nécessitent de l'argent liquide : par exemple les petits commerces, le marché hebdomadaire, les marchés aux puces ou même les manifestations culturelles. Tout cela sera limité par la carte de paiement.</p>
 
-			<p>Même si l'apparence de la carte de paiement ressemble à celle d'une carte EC, ses possibilités d'utilisation sont beaucoup plus limitées, car la carte ne fonctionne que dans des magasins spécifiques. Et si les personnes concernées souhaitent mettre de l'argent de côté pour soutenir financièrement leur famille à l'étranger, malgré les maigres prestations, cela leur est très difficile. La carte pose des problèmes en matière de protection des données. La carte de paiement offre aux autorités un droit de regard et des possibilités de contrôle.</p>
+			<p>Même si l'apparence de la carte de paiement ressemble à celle d'une carte EC, ses possibilités d'utilisation sont beaucoup plus limitées, car la carte ne fonctionne que dans des magasins spécifiques. Et si les personnes concernées souhaitent mettre de l'argent de côté pour soutenir financièrement leur famille à l'étranger, malgré le peu de prestations, cela leur est très difficile. La carte pose des problèmes en matière de protection des données. La carte de paiement offre aux autorités un aperçu et des possibilités de contrôle.</p>
 
 
 			<h2>Qu'allons-nous faire ?</h2>
@@ -95,13 +95,24 @@
 				<li>... Si tu veux nous soutenir, si tu veux agir juridiquement contre la carte de paiement ou si tu veux simplement faire notre connaissance ou si tu as des questions.</li>
 			</ul>
 
-			<p>Nous dépendons également des dons. Nous avons besoin d'un tampon financier pour les actions d'échange. De plus, nous avons besoin d'un peu d'argent, par exemple pour du matériel comme des flyers ou des affiches, pour de petites acquisitions comme des caisses verrouillables ou des scanners de codes-barres ou pour la location de salles pour des manifestations d'information. Des reçus de dons peuvent être délivrés.</p>
+			<p>Nous dépendons également des dons. Nous avons besoin d'un tampon financier pour les actions d'échange. De plus, nous avons besoin d'un peu d'argent, par exemple pour du matériel comme des flyers ou des affiches, pour de petites acquisitions comme des caisses verrouillables ou des scanners de codes-barres ou pour la location de salles pour des manifestations d'information. Des reçus de dons peuvent être établis.</p>
+
+			<p>Si le cas se présentait où le tampon financier ne serait plus nécessaire, il serait donné aux organisations suivantes :</p>
+
+			<ul>
+				<li><a href="https://sea-watch.org/en/">Sea-Watch e.V.</a></li>
+				<li><a href="https://alarmphone.org/en/">ALARMPHONE</a></li>
+				<li><a href="https://www.asyl-heidelberg.de/">Cercle de travail sur l'asile de Heidelberg e.V.</a></li>
+				<li><a href="https://diakonie-heidelberg.de/angebote/flucht-und-migration/cafe-talk">Café Talk </a></li>				
+			</ul>
+
+			<p>Cela signifie que ton don fait du bien dans tous les cas.</p>
 
 			<p>Pour un monde solidaire !</p>
 
 			<h2>A quoi ressemblent les structures interrégionales ?</h2>
 
-			<p>Il existe déjà dans de nombreuses villes des initiatives contre la carte de paiement et des initiatives d'échange comme la nôtre. Nous sommes reliés au niveau national par le réseau "Mêmes droits sociaux pour tous !"<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">(site web</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">Instagram</a>)</p>
+			<p>Il existe déjà dans de nombreuses villes des initiatives contre la carte de paiement et des initiatives d'échange comme la nôtre. Nous sommes reliés à l'échelle nationale au sein du réseau "Mêmes droits sociaux pour tous !"<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">(site web</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">Instagram</a>)</p>
 
 			<h2>Plus d'informations</h2>
 			
@@ -121,7 +132,7 @@
 			<p>C'est avec effroi et stupeur que nous observons l'introduction progressive de la carte de paiement pour les personnes bénéficiant de prestations pour demandeurs d'asile dans le Bade-Wurtemberg. En raison du grand nombre d'aspects discriminatoires, restrictifs et excluants de la carte de paiement, nous nous prononçons contre son introduction à Heidelberg.</p>
 
 			<ol>
-			<li>Les personnes en quête de protection ont un compte à Heidelberg comme les autres. Avec la carte de compte courant, ils peuvent disposer de leur argent. S'ils ne sont pas encore dans la vie active, ils reçoivent d'abord des prestations selon la AsylbLG. À l'avenir, celles-ci seront transférées sur des cartes de paiement qui permettront de limiter les dépenses en espèces ainsi que les virements/prélèvements. Objectif : éviter les virements à sa propre famille et aux passeurs, dissuasion, réduction des "facteurs d'attraction". Ce contexte de carte de paiement va à l'encontre de nos droits fondamentaux : l'interdiction de discrimination, la protection de la famille, les droits de la personne.</li>
+			<li>Les personnes en quête de protection ont un compte à Heidelberg comme les autres. Avec la carte de compte courant, ils peuvent disposer de leur argent. S'ils ne sont pas encore dans la vie active, ils reçoivent d'abord des prestations selon la AsylbLG. À l'avenir, celles-ci seront transférées sur des cartes de paiement qui permettront de limiter les dépenses en espèces ainsi que les virements/prélèvements. Objectif : éviter les transferts à sa propre famille et aux passeurs, dissuasion, réduction des "facteurs d'attraction". Ce contexte de carte de paiement va à l'encontre de nos droits fondamentaux : l'interdiction de discrimination, la protection de la famille, les droits de la personne.</li>
 
 			<li>La carte de paiement est une atteinte aux droits de la personne. Les personnes qui ont fui leur pays sont ainsi bridées. Les achats dans les magasins qu'elles préfèrent peuvent ne pas avoir lieu, car l'installation du lecteur de carte de débit est trop coûteuse pour les petits magasins. Pour les virements et les prélèvements, il faut l'autorisation des services sociaux. S'il y a des besoins particuliers, une demande doit être faite. 50 € en espèces est un montant soumis à l'appréciation de l'office. L'attribution de la carte de paiement elle-même est soumise à l'appréciation. Non seulement cela va créer une charge supplémentaire pour l'administration, mais cela rend également monstrueuse la dépendance des personnes concernées vis-à-vis de l'Office, notamment parce que la transparence est perdue pour elles.</li>
 
