--- a/www/ru/index.html
+++ b/www/ru/index.html
@@ -45,7 +45,7 @@
 
 			<p>Лучше всего добираться на общественном транспорте с автобусных остановок <span translate="no">Betriebshof</span> и <span translate="no">Hauptbahnhof</span></p>
 			<h2>Когда?</h2>
-			<p>Каждый 2-й вторник и каждую 3-ю пятницу месяца с 16:00 до 19:00.</p>
+			<p>Каждый 2-й вторник и каждую 3-ю пятницу месяца с 17:00 до 19:00.</p>
 		</div>
 
 		<div class="content">
@@ -53,7 +53,7 @@
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>В Гейдельберге и округе Рейн-Неккар в обозримом будущем будет введена дискриминационная "платежная карта" для всех беженцев, получающих пособия в соответствии с Законом о пособиях лицам, ищущим убежища. За решением в пользу платежной карты стоит расистская политика, направленная на дальнейшее ограничение жизни беженцев и отгораживание Европы от глобального Юга. Мы боремся против ограничительной платежной карты и хотим сделать солидарность реальностью!</p>
+			<p>В Гейдельберге и округе Рейн-Неккар в обозримом будущем будет введена дискриминационная "платежная карта" для всех беженцев, получающих пособия в соответствии с Законом о пособиях просителям убежища. За решением в пользу платежной карты стоит расистская политика, которая пытается еще больше ограничить жизнь беженцев и отгородить Европу от глобального Юга. Мы боремся против ограничительной платежной карты и хотим сделать солидарность реальностью!</p>
 
 			<h2>Почему мы отклоняем платежную карту?</h2>
 
@@ -97,6 +97,17 @@
 
 			<p>Мы также зависим от пожертвований. Нам нужен финансовый резерв для проведения мероприятий по обмену. Нам также нужны деньги, например, на материалы, такие как листовки или плакаты, небольшие покупки, такие как закрывающиеся кассы или сканеры штрих-кодов, или аренда помещения для информационных мероприятий. Можно выдавать квитанции на пожертвования.</p>
 
+			<p>Если финансовый резерв больше не нужен, он будет передан следующим организациям:</p>
+
+			<ul>
+				<li><a href="https://sea-watch.org/en/">Sea-Watch e.V.</a></li>
+				<li><a href="https://alarmphone.org/en/">ALARMPHONE</a></li>
+				<li><a href="https://www.asyl-heidelberg.de/">Asylarbeitskreis Heidelberg e.V.</a></li>
+				<li><a href="https://diakonie-heidelberg.de/angebote/flucht-und-migration/cafe-talk">Беседа в кафе </a></li>				
+			</ul>
+
+			<p>Это значит, что ваше пожертвование всегда будет приносить пользу.</p>
+
 			<p>За мир солидарности!</p>
 
 			<h2>Как выглядят надрегиональные структуры?</h2>
@@ -121,11 +132,11 @@
 			<p>Мы шокированы и озадачены постепенным введением в Баден-Вюртемберге платежной карты для лиц, получающих пособие для лиц, ищущих убежище. Из-за многочисленных дискриминационных, ограничительных и исключающих аспектов платежной карты мы выступаем против ее введения в Хайдельберге.</p>
 
 			<ol>
-			<li>У людей, ищущих защиты в Гейдельберге, есть счет, как и у всех остальных. Для доступа к своим деньгам они могут использовать карточку текущего счета. Если они еще не трудоустроены, то первоначально получают пособия в соответствии с AsylbLG. В дальнейшем они должны быть переведены на платежные карты, с которых ограничены как расходы наличными, так и переводы/дебетовые операции. Цель: отсутствие переводов собственной семье и контрабандистам, сдерживание, снижение "факторов притяжения". Такая основа для платежных карт нарушает наши фундаментальные права: запрет на дискриминацию, защиту семьи, личные права.</li>
+			<li>У людей, ищущих защиты в Гейдельберге, есть счет, как и у всех остальных. Для доступа к своим деньгам они могут использовать карточку текущего счета. Если они еще не трудоустроены, то первоначально получают пособия в соответствии с AsylbLG. В дальнейшем они будут перечисляться на платежные карты, с которых ограничены как расходы наличными, так и переводы/дебетовые операции. Цель: отказ от переводов в свою семью и контрабандистам, сдерживание, снижение "факторов притяжения". Такая основа для платежных карт нарушает наши фундаментальные права: запрет на дискриминацию, защиту семьи, личные права.</li>
 
 			<li>Платежная карта - это посягательство на личные права. Люди, покинувшие свою страну, становятся объектом контроля. Они могут лишиться возможности делать покупки в своих любимых магазинах, потому что небольшим магазинам слишком дорого устанавливать считывающее устройство для дебетовых карт. Переводы и прямые дебетовые платежи требуют разрешения от управления социального обеспечения. Если есть особые потребности, необходимо подать заявление. 50 € наличными - это сумма, которая выдается по усмотрению управления. Выделение самой платежной карты зависит от усмотрения. Это не только ляжет дополнительным бременем на администрацию, но и поставит пострадавших в чудовищную зависимость от ведомства, в том числе и потому, что для них будет потеряна прозрачность.</li>
 
-			<li>Цель введения платежной карты все равно не будет достигнута. Еженедельный отчет DIW 49/2024 показывает, что лишь очень немногие беженцы отправляют денежные переводы за границу, и уж точно меньше всего тех, кто получает пособия по программе AsylbLG, поскольку эти пособия (максимум 441 евро) даже ниже пособия гражданина и уж точно не соответствуют требованиям, установленным постановлением Федерального конституционного суда от 2012 года, согласно которому прожиточный минимум не должен релятивизироваться с точки зрения миграционной политики. Само собой разумеется, что причины бегства имеют более весомое значение, чем вопрос о пособиях.</li>
+			<li>Цель введения платежной карты все равно не будет достигнута. Еженедельный доклад DIW 49/2024 показывает, что лишь очень немногие беженцы отправляют денежные переводы за границу, и уж точно меньше всего тех, кто получает пособия по программе AsylbLG, поскольку эти пособия (максимум 441 евро) даже ниже пособия гражданина и уж точно не соответствуют требованиям, установленным постановлением Федерального конституционного суда от 2012 года, согласно которому прожиточный минимум не должен релятивизироваться с точки зрения миграционной политики. Само собой разумеется, что причины бегства имеют более весомое значение, чем вопрос о пособиях.</li>
 
 			<li>Введение ограничительной платежной карты является частью масштабного наступления на права людей, ищущих защиты. Демонтаж социальных прав беженцев идет рука об руку с расширением "Крепости Европа" и попытками постепенно избавиться от ответственности за защиту беженцев (Всеобщая декларация прав человека 1948 года, статья 14) и своих обязательств, не в последнюю очередь в виде Женевской конвенции о беженцах. Ультраправым удалось сформировать доминирующий дискурс, в котором люди, ищущие защиты, рассматриваются исключительно как угроза. К сожалению, этот расистский нарратив на протяжении многих лет все чаще подхватывают и демократические партии. Тем самым они стимулируют процессы десолидаризации и смещают социальный дискурс вправо. Платежная карта - это не что иное, как популистская символическая политика, которая служит расизму и еще больше маргинализирует, дискриминирует и контролирует тех, кто ищет защиты. Интеграция выглядит иначе!</li>
 
@@ -189,7 +200,7 @@
 			<h2>Свяжитесь с нами</h2>
 
 			<ul>
-				<li>Пишите нам:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
+				<li>Напишите нам:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>Instagram:<br><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
 				<li translate="no">Telegram:<br><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
