--- a/www/tr/index.html
+++ b/www/tr/index.html
@@ -45,7 +45,7 @@
 
 			<p>Toplu taşıma araçlarıyla en iyi <span translate="no">Betriebshof</span> ve <span translate="no">Hauptbahnhof</span></p>
 			<h2>Ne zaman?</h2>
-			<p>Her ayın 2. Salı ve 3. Cuma günleri 16:00-19:00 saatleri arasında.</p>
+			<p>Her ayın 2. Salı ve 3. Cuma günleri 17:00-19:00 saatleri arasında.</p>
 		</div>
 
 		<div class="content">
@@ -97,6 +97,17 @@
 
 			<p>Ayrıca bağışlara da bağımlıyız. Takas etkinlikleri için mali bir tampona ihtiyacımız var. Ayrıca, örneğin el ilanları veya posterler gibi materyaller, kilitlenebilir kasalar veya barkod tarayıcılar gibi küçük alımlar veya bilgilendirme etkinlikleri için oda kiralama gibi konularda da bir miktar paraya ihtiyacımız var. Bağış makbuzları düzenlenebilir.</p>
 
+			<p>Mali tampona artık ihtiyaç duyulmaması halinde, bu para aşağıdaki kuruluşlara bağışlanacaktır:</p>
+
+			<ul>
+				<li><a href="https://sea-watch.org/en/">Sea-Watch e.V.</a></li>
+				<li><a href="https://alarmphone.org/en/">ALARM TELEFONU</a></li>
+				<li><a href="https://www.asyl-heidelberg.de/">Asylarbeitskreis Heidelberg e.V.</a></li>
+				<li><a href="https://diakonie-heidelberg.de/angebote/flucht-und-migration/cafe-talk">Kafe Sohbeti </a></li>				
+			</ul>
+
+			<p>Bu da bağışınızın her zaman iyilik getireceği anlamına gelir.</p>
+
 			<p>Dayanışma dolu bir dünya için!</p>
 
 			<h2>Bölgeler üstü yapılar neye benziyor?</h2>
@@ -121,13 +132,13 @@
 			<p>Baden-Württemberg'de sığınmacı yardımı alan kişiler için ödeme kartının kademeli olarak uygulamaya konulması karşısında şok olduk ve şaşkınlığa uğradık. Ödeme kartının birçok ayrımcı, kısıtlayıcı ve dışlayıcı yönü nedeniyle Heidelberg'de uygulamaya konulmasına karşıyız.</p>
 
 			<ol>
-			<li>Heidelberg'de koruma arayan kişilerin de herkes gibi bir hesabı vardır. Paralarına erişmek için cari hesap kartlarını kullanabilirler. Henüz bir işte çalışmıyorlarsa, başlangıçta AsylbLG uyarınca yardım alırlar. Gelecekte bunlar, hem nakit harcamaların hem de transferlerin/borçlanmaların kısıtlandığı ödeme kartlarına aktarılacaktır. Amaç: kendi ailelerine ve insan kaçakçılarına transfer yapılmaması, caydırıcılık, "çekme faktörlerinin" azaltılması. Ödeme kartının bu arka planı temel haklarımızı ihlal etmektedir: ayrımcılık yasağı, ailenin korunması, kişisel haklar.</li>
+			<li>Heidelberg'de koruma arayan kişilerin de herkes gibi bir hesabı vardır. Paralarına erişmek için cari hesap kartlarını kullanabilirler. Henüz bir işte çalışmıyorlarsa, başlangıçta AsylbLG uyarınca yardım alırlar. Gelecekte bunlar, hem nakit harcamaların hem de transferlerin/borçlanmaların kısıtlandığı ödeme kartlarına aktarılacaktır. Amaç: Kişinin kendi ailesine ve insan kaçakçılarına transfer yapmaması, caydırıcılık, "çekme faktörlerinin" azaltılması. Ödeme kartının bu arka planı temel haklarımızı ihlal etmektedir: ayrımcılık yasağı, ailenin korunması, kişisel haklar.</li>
 
 			<li>Ödeme kartı kişisel haklara bir tecavüzdür. Ülkelerinden kaçan insanlar böylece kontrol altına alınmaktadır. En sevdikleri dükkanlardan alışveriş yapamayabilirler çünkü küçük dükkanlar için banka kartı okuyucusu kurmak çok pahalıdır. Havaleler ve otomatik ödemeler için sosyal yardım dairesinden izin alınması gerekiyor. Özel ihtiyaçlar söz konusuysa, bir başvuru yapılmalıdır. 50 € nakit, ofisin takdirine bağlı bir miktardır. Ödeme kartının tahsisi takdire tabidir. Bu durum sadece idareye ek bir yük getirmekle kalmayacak, aynı zamanda şeffaflığın ortadan kalkması nedeniyle mağdurları da kuruma aşırı derecede bağımlı hale getirecektir.</li>
 
 			<li>Ödeme kartının uygulamaya konulmasıyla hedeflenen amaca zaten ulaşılamayacaktır. DIW'in 49/2024 sayılı haftalık raporu, mültecilerin çok azının yurtdışına havale gönderdiğini ve en azından AsylbLG kapsamında yardım alanların bu yardımları (en fazla 441 Avro) vatandaşlık ödeneğinden bile daha düşük olduğu ve kesinlikle Federal Anayasa Mahkemesi'nin 2012 yılında aldığı ve asgari geçim düzeyinin göç politikası açısından göreceli olmaması gerektiği yönündeki kararının gerekliliklerini karşılamadığını göstermektedir. Ayrıca, kaçış nedenlerinin yardım meselesinden daha ağır bastığını söylemeye gerek yok.</li>
 
-			<li>Kısıtlayıcı bir ödeme kartının uygulamaya konulması, koruma arayan insanların haklarına yönelik büyük bir saldırının parçasıdır. Mültecilerin sosyal haklarının ortadan kaldırılması, Avrupa Kalesi'nin genişlemesi ve mültecileri koruma sorumluluklarından (1948 İnsan Hakları Evrensel Beyannamesi, Madde 14) ve Cenevre Mülteci Sözleşmesi başta olmak üzere yükümlülüklerinden kademeli olarak kurtulma çabalarıyla el ele gitmektedir. Aşırı sağ, koruma arayan insanları yalnızca bir tehdit olarak gören baskın bir söylem geliştirmeyi başarmıştır. Ne yazık ki bu ırkçı söylem yıllardır demokratik partiler tarafından da giderek daha fazla benimsenmektedir. Bunu yaparak, desolidarizasyon süreçlerini tetiklemekte ve toplumsal söylemi sağa kaydırmaktadırlar. Ödeme kartı, ırkçılığa hizmet eden ve koruma arayanları daha da marjinalleştiren, onlara karşı ayrımcılık yapan ve onları kontrol eden popülist sembolik politikalardan başka bir şey değildir. Entegrasyon farklı görünüyor!</li>
+			<li>Kısıtlayıcı bir ödeme kartının uygulamaya konulması, koruma arayan insanların haklarına yönelik büyük bir saldırının parçasıdır. Mültecilerin sosyal haklarının ortadan kaldırılması, Avrupa Kalesi'nin genişlemesi ve mültecileri koruma sorumluluklarından (1948 İnsan Hakları Evrensel Beyannamesi, Madde 14) ve Cenevre Mülteci Sözleşmesi başta olmak üzere yükümlülüklerinden kademeli olarak kurtulma çabalarıyla el ele gitmektedir. Aşırı sağ, koruma arayan insanları yalnızca bir tehdit olarak gören baskın bir söylem geliştirmeyi başarmıştır. Ne yazık ki bu ırkçı söylem yıllardır demokratik partiler tarafından da giderek daha fazla benimsenmektedir. Bunu yaparak, desolidarizasyon süreçlerini yönlendiriyor ve toplumsal söylemi sağa kaydırıyorlar. Ödeme kartı, ırkçılığa hizmet eden ve koruma arayanları daha da marjinalleştiren, onlara karşı ayrımcılık yapan ve onları kontrol eden popülist sembolik politikalardan başka bir şey değildir. Entegrasyon farklı görünüyor!</li>
 
 			<li>Ödeme kartı uygulamasının alternatifi bulunmamaktadır. NRW, yerel yönetimlerin ödeme kartını uygulamaya koymamasına izin veren bir devre dışı bırakma kuralı getirmiştir. Birçok büyük şehir şimdiden bundan yararlandı. Ancak Aşağı Saksonya'da da bir direniş söz konusu: orada bir opt-out düzenlemesi olmamasına rağmen Hannover şehri ödeme kartını uygulamaya koymayacağını ilan etti ve böylece kendinden emin bir şekilde açık bir direniş sergiliyor. CDU, SPD ve Yeşiller partilerinin de dahil olduğu belediye meclisinin çoğunluğu, ayrımcı olduğu gerekçesiyle kartı uygulamaya koymayacağını açıkladı.</li>
 
