--- a/www/uk/index.html
+++ b/www/uk/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="uk">
 	<head>
-		<title>Стоп-платіжна картка</title>
+		<title>Платіжна картка "Стоп</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="Bezahlkarte Stoppen" />
@@ -45,7 +45,7 @@
 
 			<p>Найкраще добиратися громадським транспортом від автобусних зупинок <span translate="no">Betriebshof</span> та <span translate="no">Hauptbahnhof</span></p>
 			<h2>Коли?</h2>
-			<p>Кожного 2-го вівторка та кожної 3-ї п'ятниці місяця з 16:00 до 19:00.</p>
+			<p>Кожного 2-го вівторка та кожної 3-ї п'ятниці місяця з 17:00 до 19:00.</p>
 		</div>
 
 		<div class="content">
@@ -53,7 +53,7 @@
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>У Гейдельберзі та районі Рейн-Неккар у найближчому майбутньому буде запроваджено дискримінаційну "платіжну картку" для всіх біженців, які отримують допомогу відповідно до Закону про допомогу шукачам притулку. За рішенням на користь платіжної картки стоїть расистська політика, спрямована на подальше обмеження життя біженців і відгородження Європи від Глобального Півдня. Ми виступаємо проти обмежувальної платіжної картки і хочемо зробити солідарність реальністю!</p>
+			<p>У Гейдельберзі та районі Рейн-Неккар у найближчому майбутньому буде запроваджено дискримінаційну "платіжну картку" для всіх біженців, які отримують допомогу відповідно до Закону про допомогу шукачам притулку. За рішенням на користь платіжної картки стоїть расистська політика, спрямована на подальше обмеження життя біженців та ізоляцію Європи від Глобального Півдня. Ми виступаємо проти обмежувальної платіжної картки і хочемо зробити солідарність реальністю!</p>
 
 			<h2>Чому ми відхиляємо платіжну картку?</h2>
 
@@ -97,6 +97,17 @@
 
 			<p>Ми також залежимо від пожертв. Нам потрібен фінансовий буфер для проведення заходів обміну. Нам також потрібні гроші, наприклад, на матеріали, такі як листівки чи плакати, дрібні покупки, такі як каси, що замикаються, або сканери штрих-кодів, або оренда приміщення для інформаційних заходів. Ми можемо видавати квитанції про пожертвування.</p>
 
+			<p>У випадку, якщо фінансовий буфер більше не потрібен, він буде переданий наступним організаціям:</p>
+
+			<ul>
+				<li><a href="https://sea-watch.org/en/">Sea-Watch e.V.</a></li>
+				<li><a href="https://alarmphone.org/en/">АЛАРМОН</a></li>
+				<li><a href="https://www.asyl-heidelberg.de/">Asylarbeitskreis Heidelberg e.V.</a></li>
+				<li><a href="https://diakonie-heidelberg.de/angebote/flucht-und-migration/cafe-talk">Café Talk </a></li>				
+			</ul>
+
+			<p>Це означає, що ваша пожертва завжди піде на користь.</p>
+
 			<p>За світ солідарності!</p>
 
 			<h2>Як виглядають надрегіональні структури?</h2>
@@ -125,15 +136,15 @@
 
 			<li>Платіжна картка - це посягання на особисті права. Люди, які втекли з рідної країни, потрапляють під контроль. Вони можуть не мати змоги робити покупки в улюблених магазинах, оскільки для невеликих магазинів встановлення зчитувального пристрою для дебетових карток є надто дорогим задоволенням. Перекази та пряме списання коштів вимагають дозволу від управління соціального захисту. Якщо є особливі потреби, необхідно подати заяву. 50 євро готівкою - це сума, яка залежить від розсуду управління. Виділення самої платіжної картки також здійснюється на власний розсуд. Це не тільки покладе додатковий тягар на адміністрацію, але й поставить постраждалих осіб у жахливу залежність від управління, оскільки для них втрачається прозорість.</li>
 
-			<li>Мета запровадження платіжної картки все одно не буде досягнута. Щотижневий звіт DIW 49/2024 показує, що дуже мало біженців надсилають грошові перекази за кордон, і, звичайно, найменше тих, хто отримує допомогу в рамках AsylbLG, оскільки ця допомога (максимум 441 євро) навіть нижча за допомогу громадянина і, безумовно, не відповідає вимогам, встановленим рішенням Федерального конституційного суду від 2012 року, згідно з яким прожитковий мінімум не повинен бути релятивізований з точки зору міграційної політики. Зрозуміло також, що причини втечі мають більшу вагу, ніж питання виплат.</li>
+			<li>Мета запровадження платіжної картки все одно не буде досягнута. Щотижневий звіт DIW 49/2024 показує, що дуже мало біженців надсилають грошові перекази за кордон, і, звичайно, найменше тих, хто отримує допомогу в рамках AsylbLG, оскільки ця допомога (максимум 441 євро) навіть нижча за допомогу громадянина і, безумовно, не відповідає вимогам, встановленим рішенням Федерального конституційного суду 2012 року, згідно з яким прожитковий мінімум не повинен бути релятивізований з точки зору міграційної політики. Зрозуміло також, що причини втечі мають більшу вагу, ніж питання виплат.</li>
 
 			<li>Запровадження обмежувальних платіжних карток є частиною масштабного наступу на права людей, які шукають захисту. Демонтаж соціальних прав біженців йде пліч-о-пліч з розширенням Європи-фортеці і спробами поступово позбутися відповідальності за захист біженців (Загальна декларація прав людини 1948 року, стаття 14) і своїх зобов'язань, не в останню чергу у формі Женевської конвенції про статус біженців. Ультраправим вдалося створити домінуючий дискурс, який розглядає людей, що шукають захисту, виключно як загрозу. На жаль, цей расистський наратив роками все частіше підхоплюють і демократичні партії. Таким чином, вони стимулюють процеси десолідаризації та зміщення суспільного дискурсу вправо. Платіжна картка - це не що інше, як популістська символічна політика, яка слугує расизму і сприяє подальшій маргіналізації, дискримінації та контролю над тими, хто шукає захисту. Інтеграція виглядає інакше!</li>
 
-			<li>Альтернативи запровадженню платіжної картки немає. Північний Рейн-Вестфалія запровадив правило відмови, яке дозволяє місцевій владі не запроваджувати платіжні картки. Кілька великих міст вже скористалися цією можливістю. Але в Нижній Саксонії також є опір: хоча там немає правила відмови, місто Ганновер оголосило, що не буде впроваджувати платіжну картку, і таким чином впевнено пропонує відкритий опір. Більшість міської ради, в тому числі ХДС, СДПН і "зелені", заявили, що не запроваджуватимуть картку, оскільки вона є дискримінаційною.</li>
+			<li>Альтернативи запровадженню платіжної картки немає. Північний Рейн-Вестфалія запровадив правило відмови, яке дозволяє місцевій владі не запроваджувати платіжні картки. Кілька великих міст вже скористалися цією можливістю. Але в Нижній Саксонії також існує опір: хоча там немає правила відмови, місто Ганновер оголосило, що не запроваджуватиме платіжну картку, і, таким чином, впевнено пропонує відкритий опір. Більшість міської ради, в тому числі ХДС, СДПН і "зелені", заявили, що не запроваджуватимуть картку, оскільки вона є дискримінаційною.</li>
 
 			</ol>
 
-			<p>Ми закликаємо депутатські групи муніципальної ради Гейдельберга та адміністрацію також відмовитися від дискримінаційної та безглуздої платіжної картки в Гейдельберзі.</p>
+			<p>Ми закликаємо депутатські групи муніципальної ради Гейдельберга та адміністрацію міста відмовитися від дискримінаційної та безглуздої платіжної картки також і в Гейдельберзі.</p>
 
 			<p>Перший підписант</p>
 
